NetBSD Problem Report #55535

From www@netbsd.org  Mon Aug  3 16:49:49 2020
Return-Path: <www@netbsd.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 40C6E1A9217
	for <gnats-bugs@gnats.NetBSD.org>; Mon,  3 Aug 2020 16:49:49 +0000 (UTC)
Message-Id: <20200803164948.73AA81A923A@mollari.NetBSD.org>
Date: Mon,  3 Aug 2020 16:49:48 +0000 (UTC)
From: uwe@stderr.spb.ru
Reply-To: uwe@stderr.spb.ru
To: gnats-bugs@NetBSD.org
Subject: PCIVERBOSE as a built-in module is activated too late
X-Send-Pr-Version: www-1.0

>Number:         55535
>Category:       kern
>Synopsis:       PCIVERBOSE as a built-in module is activated too late
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Mon Aug 03 16:50:00 +0000 2020
>Closed-Date:    Wed Aug 05 15:00:09 +0000 2020
>Last-Modified:  Tue Aug 11 17:10:02 +0000 2020
>Originator:     Valery Ushakov
>Release:        NetBSD current
>Organization:
>Environment:
NetBSD felix 9.99.69 NetBSD 9.99.69 (FELIX) #6: Mon Aug  3 19:12:29 MSK 2020  uwe@majava:/home/uwe/work/netbsd/cvs/src/sys/arch/landisk/compile/FELIX landisk

>Description:
If options PCIVERBOSE is enabled, it's included in the kernel as a
built-in module.  The problem is that the modules are activated too
late (when interrupts are enabled?) and by that time all the pci
devices has already been configured non-verbosely, thus defeating
the purpose of PCIVERBOSE.

>How-To-Repeat:
Enable options PCIVERBOSE in a kernel config.  Boot that kernel.
See pci devices still reported with numeric ids.

>Fix:

>Release-Note:

>Audit-Trail:
From: "Valeriy E. Ushakov" <uwe@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/55535 CVS commit: src/sys/dev
Date: Mon, 3 Aug 2020 18:19:35 +0000

 Module Name:	src
 Committed By:	uwe
 Date:		Mon Aug  3 18:19:35 UTC 2020

 Modified Files:
 	src/sys/dev: dev_verbose.h

 Log Message:
 DEV_VERBOSE_MODULE_DEFINE - use MODULE_CLASS_DRIVER.

 This makes built-in verbose modules available before the start of the
 autoconfiguration, when they are needed.  From pgoyette@

 PR kern/55535


 To generate a diff of this commit:
 cvs rdiff -u -r1.2 -r1.3 src/sys/dev/dev_verbose.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->pending-pullups
State-Changed-By: uwe@NetBSD.org
State-Changed-When: Mon, 03 Aug 2020 18:31:20 +0000
State-Changed-Why:
Fix committed.  Pull up requests for -8 and -9 sent.


From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/55535 CVS commit: [netbsd-9] src/sys/dev
Date: Wed, 5 Aug 2020 14:47:04 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Wed Aug  5 14:47:04 UTC 2020

 Modified Files:
 	src/sys/dev [netbsd-9]: dev_verbose.h

 Log Message:
 Pull up following revision(s) (requested by uwe in ticket #1037):

 	sys/dev/dev_verbose.h: revision 1.3

 DEV_VERBOSE_MODULE_DEFINE - use MODULE_CLASS_DRIVER.

 This makes built-in verbose modules available before the start of the
 autoconfiguration, when they are needed.  From pgoyette@

 PR kern/55535


 To generate a diff of this commit:
 cvs rdiff -u -r1.2 -r1.2.26.1 src/sys/dev/dev_verbose.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/55535 CVS commit: [netbsd-8] src/sys/dev
Date: Wed, 5 Aug 2020 14:48:35 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Wed Aug  5 14:48:35 UTC 2020

 Modified Files:
 	src/sys/dev [netbsd-8]: dev_verbose.h

 Log Message:
 Pull up following revision(s) (requested by uwe in ticket #1584):

 	sys/dev/dev_verbose.h: revision 1.3

 DEV_VERBOSE_MODULE_DEFINE - use MODULE_CLASS_DRIVER.

 This makes built-in verbose modules available before the start of the
 autoconfiguration, when they are needed.  From pgoyette@

 PR kern/55535


 To generate a diff of this commit:
 cvs rdiff -u -r1.2 -r1.2.10.1 src/sys/dev/dev_verbose.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: pending-pullups->closed
State-Changed-By: uwe@NetBSD.org
State-Changed-When: Wed, 05 Aug 2020 15:00:09 +0000
State-Changed-Why:
Pullups done.  Closing.


From: "Valeriy E. Ushakov" <uwe@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/55535 CVS commit: src/sys/dev
Date: Tue, 11 Aug 2020 12:10:10 +0000

 Module Name:	src
 Committed By:	uwe
 Date:		Tue Aug 11 12:10:10 UTC 2020

 Modified Files:
 	src/sys/dev: dev_verbose.h

 Log Message:
 DEV_VERBOSE_DEFINE - use MODULE_CLASS_DRIVER to match the definition.

 Catch up with previous to unbreak autoloading of verbose modules.
 PR kern/55535

 CVS: ----------------------------------------------------------------------
 CVS: CVSROOT  cvs.NetBSD.org:/cvsroot
 CVS: please use "PR category/123" to have the commitmsg appended to PR 123
 CVS:
 CVS: Please evaluate your changes and consider the following.
 CVS: Abort checkin if you answer no.
 CVS: => For all changes:
 CVS: Do the changed files compile?
 CVS: Has the change been tested?
 CVS: => If you are not completely familiar with the changed components:
 CVS: Has the change been posted for review?
 CVS: Have you allowed enough time for feedback?
 CVS: => If the change is major:
 CVS: => If the change adds files to, or removes files from $DESTDIR:
 CVS: => If you are changing a library or kernel interface:
 CVS: Have you successfully run "./build.sh release"?


 To generate a diff of this commit:
 cvs rdiff -u -r1.3 -r1.4 src/sys/dev/dev_verbose.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/55535 CVS commit: [netbsd-9] src/sys/dev
Date: Tue, 11 Aug 2020 17:06:18 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Tue Aug 11 17:06:18 UTC 2020

 Modified Files:
 	src/sys/dev [netbsd-9]: dev_verbose.h

 Log Message:
 Additionally pull up following revision(s) (requested by uwe in ticket #1037):

 	sys/dev/dev_verbose.h: revision 1.4

 DEV_VERBOSE_DEFINE - use MODULE_CLASS_DRIVER to match the definition.
 Catch up with previous to unbreak autoloading of verbose modules.
 PR kern/55535


 To generate a diff of this commit:
 cvs rdiff -u -r1.2.26.1 -r1.2.26.2 src/sys/dev/dev_verbose.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/55535 CVS commit: [netbsd-8] src/sys/dev
Date: Tue, 11 Aug 2020 17:07:55 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Tue Aug 11 17:07:55 UTC 2020

 Modified Files:
 	src/sys/dev [netbsd-8]: dev_verbose.h

 Log Message:
 Additionally pull up following revision(s) (requested by uwe in ticket #1584):

 	sys/dev/dev_verbose.h: revision 1.4

 DEV_VERBOSE_DEFINE - use MODULE_CLASS_DRIVER to match the definition.
 Catch up with previous to unbreak autoloading of verbose modules.
 PR kern/55535


 To generate a diff of this commit:
 cvs rdiff -u -r1.2.10.1 -r1.2.10.2 src/sys/dev/dev_verbose.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.46 2020/01/03 16:35:01 leot Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2020 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.