DEV_VERBOSE_MODULE_DEFINE - use MODULE_CLASS_DRIVER.

This makes built-in verbose modules available before the start of the
autoconfiguration, when they are needed.  From pgoyette@

PR kern/55535